# Trial-Demo

./: CMakeLists.txt  README.md  addNumbers.c  addNumbers.cpp  main.cpp  testToAddTwoNumbers.cpp
.github/workflow/: ci.yml
.github/workflows/: main.yml
